--- a/src/makefile
+++ b/src/makefile
@@ -1,12 +1,6 @@
-COMMON=/O2 /MT /EHsc /arch:AVX /I../../mjpro150/include ../../mjpro150/bin/mujoco150.lib /Fe../../mjpro150/bin/
+COMMON=/O2 /MT /EHsc /arch:AVX /I../../mujoco200/include ../../mujoco200/bin/mujoco200.lib /Fe../../mujoco200/bin/
 
 all:
-	cl $(COMMON) ../../mjpro150/sample/basic.cpp       ../../mjpro150/bin/glfw3.lib
-	cl $(COMMON) minivive.cpp ../../mjpro150/bin/glfw3.lib ../../mjpro150/bin/glew32.lib ../../mjpro150/bin/openvr_api.lib /link OpenGL32.lib
-	cl $(COMMON) mjvive.cpp ../../mjpro150/bin/glfw3.lib ../../mjpro150/bin/glew32.lib ../../mjpro150/bin/openvr_api.lib /link OpenGL32.lib
-	cl $(COMMON) ../../mjpro150/sample/simulate.cpp    ../../mjpro150/bin/glfw3.lib
-	cl $(COMMON) ../../mjpro150/sample/record.cpp      ../../mjpro150/bin/glfw3.lib
-	cl $(COMMON) ../../mjpro150/sample/test.cpp
-	cl $(COMMON) ../../mjpro150/sample/compile.cpp
-	cl $(COMMON) ../../mjpro150/sample/derivative.cpp  /openmp
+	cl $(COMMON) mjvive.cpp ../../mujoco200/bin/glfw3.lib ../../mujoco200/bin/glew32.lib ../../mujoco200/bin/openvr_api.lib /link OpenGL32.lib
+	cl $(COMMON) minivive.cpp ../../mujoco200/bin/glfw3.lib ../../mujoco200/bin/glew32.lib ../../mujoco200/bin/openvr_api.lib /link OpenGL32.lib
 	del *.obj
